--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ button {
     margin: 0.5em;
     border-radius: 50%;
     border: none;
-    height: 46px;
-    width: 46px;
+    height: 44px;
+    width: 44px;
     outline: none;
     background: #7c7c7c2b;
     color: white;
@@ -40,7 +40,7 @@ button {
 input.search-bar {
     border: none;
     outline: none;
-    padding:  0.5em 1em;
+    padding:  0.4em 1em;
     border-radius: 24px;
     background: #7c7c7c2b;
     color: white;
@@ -50,4 +50,8 @@ input.search-bar {
 
 button:hover {
     background: #7c7c7c6b;
+}
+
+h1.temp {
+    margin: 0;
 }
