--- a/style.css
+++ b/style.css
@@ -70,3 +70,18 @@ h1.temp {
 .humidity {
     margin-bottom: 15px;
 }
+
+.weather.loading {
+    visibility: hidden;
+    max-height: 20px;
+    position: relative;
+}
+
+.weather.loading:after {
+    visibility: visible;
+    content: "Loading...";
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 20px;
+}
